// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > Render <Table/> with 1 header and 1 item 1`] = `
<DocumentFragment>
  <table
    class="af-table af-table--classModifier"
  >
    <caption
      class=""
    >
      my title
    </caption>
    <thead
      class="af-table__thead"
    >
      <tr
        class="af-table__tr"
      >
        <th
          class="af-table__th"
          role="columnheader"
          scope="col"
        >
          <span
            class="af-table__th-label"
          >
            label
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="af-table__body"
    >
      <tr
        class="af-table__tr"
      >
        <td
          class="af-table__cell"
        >
          samuel
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table > Render <Table/> with empty items 1`] = `
<DocumentFragment>
  <table
    class="af-table af-table--classModifier"
  >
    <caption
      class=""
    >
      my title
    </caption>
    <thead
      class="af-table__thead"
    >
      <tr
        class="af-table__tr"
      />
    </thead>
    <tbody
      class="af-table__body"
    />
  </table>
</DocumentFragment>
`;
